--- a/menu.html
+++ b/menu.html
@@ -1,4 +1,43 @@
-<nav id="menubloco">
+<nav class="navbar navbar-expand-md navbar-dark bg-danger mt-1">
+    <button class="navbar-toggler bg-dark" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Alterna navegação">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        
+        <a href="index.php" class="mx-5 navbar-brand"><img class="logo" src="./imagens/logo/logo.png" alt=""></a>
+        <ul class="navbar-nav">
+
+            <li class="nav-item">
+                <a class="text-light nav-link" href="produtos.php">Nossos Produtos</a>
+            </li>
+            <li class="nav-item active">
+            	<a class="text-light nav-link" href="pedidos.php">Pedidos</a>
+            </li>
+            <li class="nav-item">
+                <a class="text-light nav-link" href="loja.php">Nossas lojas</a>
+            </li>
+            <li class="nav-item">
+                <a class="text-light nav-link" href="contato.php">Contato</a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+
+
+
+
+<!--<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+	<link rel="stylesheet" href="./CSS/estilo.css">
+</head>
+<body>
+
+	<nav class="navbar navbar-expand-lg navbar-white bg-danger">
 
         <a class="logo3d" href="index.php">Full Stack Eletro</a>
         <a href="produtos.php">Nossos Produtos</a>
@@ -6,4 +45,8 @@
         <a href="loja.php">Nossas lojas</a>
         <a href="contato.php">Fale conosco</a>
 
-</nav>
+	</nav>
+
+</body>
+</html>-->
+
